fix: 로직 수정
Jira: S11P31A210-444